--- a/assets/css/bd-coming-soon.css
+++ b/assets/css/bd-coming-soon.css
@@ -76,7 +76,7 @@ a {
     background-color: #000000;
     color: #ffffff; }
 
-a.effect-shine:hover {
+a.effect-shine {
       -webkit-mask-image: linear-gradient(-60deg, rgba(0,0,0,.6) 30%, #000 60%, rgba(0,0,0,.6) 70%);
       -webkit-mask-size: 300%;
       animation: shine 2s infinite;
