--- a/assets/css/bd-coming-soon.css
+++ b/assets/css/bd-coming-soon.css
@@ -1,7 +1,7 @@
 
 body {
   font-family: 'Karla', sans-serif;
-  background-image: url("../images/bg.jpg");
+  background-image: url("../images/cool-background.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
