--- a/assets/css/bd-coming-soon.css
+++ b/assets/css/bd-coming-soon.css
@@ -1,7 +1,8 @@
 
 body {
   font-family: 'Karla', sans-serif;
-  background-image: url("../images/cool-background.png");
+  /* background-image: url("../images/cool-background.png"); */
+  background-color: #000;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
