--- a/assets/css/bd-coming-soon.css
+++ b/assets/css/bd-coming-soon.css
@@ -21,6 +21,15 @@ body {
     box-shadow: 0 4px 8px 0 rgba(220, 114, 15, 0.1);
 }
 
+.navbar-container {
+  background-color: #192145;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  height: 105px;
+  padding: 0 10px;
+  margin: 50px 0;
+}
+
 .navbar-brand {
   margin-right: 0; }
   .navbar-brand img {
