--- a/assets/css/bd-coming-soon.css
+++ b/assets/css/bd-coming-soon.css
@@ -2,16 +2,20 @@
 body {
   font-family: 'Karla', sans-serif;
   /* background-image: url("../images/cool-background.png"); */
-  background-color: #000;
+  background: #000000;
+  background-color: linear-gradient(to bottom, #ff0000 2%, #0000ff 2%, #000000 100%);
   transition: background-color 0.5s ease;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   color: #ffffff;
   padding-bottom: 75px; }
-  @media (min-width: 768px) {
-    body {
-      padding-bottom: 110px; } }
+
+@media (min-width: 768px) {
+  body {
+    padding-bottom: 110px; 
+  } 
+}
 
 .info-box {
     background-color: #192145;
@@ -22,7 +26,8 @@ body {
 }
 
 .navbar-container {
-  background-color: #192145;
+  /* background-color: #192145; */
+  background: linear-gradient(to bottom, rgba(149, 230, 126, 0) 0%, rgba(96, 214, 80, 0.1) 50%, rgba(42, 193, 34, 0.1) 50%, rgba(4, 236, 46, 0.2) 100%);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   border-radius: 8px;
   height: 105px;
