--- a/assets/css/bd-coming-soon.css
+++ b/assets/css/bd-coming-soon.css
@@ -2,6 +2,10 @@
 body {
   font-family: 'Karla', sans-serif;
   /* background-image: url("../images/cool-background.png"); */
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
   background: #000000;
   background-color: linear-gradient(to bottom, #ff0000 2%, #0000ff 2%, #000000 100%);
   transition: background-color 0.5s ease;
@@ -16,6 +20,92 @@ body {
     padding-bottom: 110px; 
   } 
 }
+
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+.site-wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.site-content {
+  flex-grow: 1;
+}
+
+.site-footer {
+  background-color: #5464ab;
+  padding: 20px;
+  text-align: center;
+}
+
+
+.section-title {
+  text-align: center;
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.testimonial-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-top: 30px;
+}
+.testimonial-section {
+  background-color: #192145;
+  display: flex;
+  padding: 5px 0;
+  overflow-x: hidden;
+}
+
+.testimonial-section .container {
+  max-width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+footer {
+  background-color: #5464ab;
+  position: relative;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  padding: 20px;
+  text-align: center;
+}
+
+.services-description {
+  margin-top: 0;
+}
+.testimonial-text {
+  font-size: 18px;
+  color: #ffffff;
+}
+
+.testimonial-author {
+  font-size: 16px;
+  color: #777777;
+  font-style: italic;
+}
+
+.testimonial-content .testimonial-text {
+  font-size: 18px;
+  color: #ffffff;
+}
+
+.testimonial-content .testimonial-author {
+  font-size: 16px;
+  color: #777777;
+  font-style: italic;
+}
+
 
 .info-box {
     background-color: #192145;
